Zero broken after JDK-8217922 (Compiler dead code removal)

XMLWordPrintable

    • b06

      The declarations of InterpreterInvocationLimit, InterpreterBackwardBranchLimit and InterpreterProfileLimit were removed, but they are still used when CC_INTERP is true.

      the error outputs:
      ---
      Building target 'images' in configuration 'linux-x86_64-zero-release'
      Updating support/modules_libs/java.base/server/libjvm.so due to 24 file(s)
      Updating hotspot/variant-zero/libjvm/gtest/libjvm.so due to 2 file(s)
      In file included from /home/loongson/aoqi/jdk/src/hotspot/share/oops/method.hpp:32:0,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/runtime/signature.hpp:29,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/systemDictionary.hpp:34,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/javaClasses.hpp:28,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:35:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_InvocationLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: error: ‘InterpreterInvocationLimit’ was not declared in this scope
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
      In file included from /home/loongson/aoqi/jdk/src/hotspot/share/oops/method.hpp:32:0,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/runtime/signature.hpp:29,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/systemDictionary.hpp:34,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/javaClasses.hpp:28,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:35:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_InvocationLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: error: ‘InterpreterInvocationLimit’ was not declared in this scope
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: note: suggested alternative: ‘reached_InvocationLimit’
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
                                 reached_InvocationLimit
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_BackwardBranchLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:104:27: error: ‘InterpreterBackwardBranchLimit’ was not declared in this scope
                  (unsigned int) InterpreterBackwardBranchLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: note: suggested alternative: ‘reached_InvocationLimit’
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
                                 reached_InvocationLimit
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_BackwardBranchLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:104:27: error: ‘InterpreterBackwardBranchLimit’ was not declared in this scope
                  (unsigned int) InterpreterBackwardBranchLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:104:27: note: suggested alternative: ‘reached_BackwardBranchLimit’
                  (unsigned int) InterpreterBackwardBranchLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                 reached_BackwardBranchLimit
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_ProfileLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:109:27: error: ‘InterpreterProfileLimit’ was not declared in this scope
                  (unsigned int) InterpreterProfileLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:104:27: note: suggested alternative: ‘reached_BackwardBranchLimit’
                  (unsigned int) InterpreterBackwardBranchLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                 reached_BackwardBranchLimit
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_ProfileLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:109:27: error: ‘InterpreterProfileLimit’ was not declared in this scope
                  (unsigned int) InterpreterProfileLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:109:27: note: suggested alternative: ‘reached_ProfileLimit’
                  (unsigned int) InterpreterProfileLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~
                                 reached_ProfileLimit
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:109:27: note: suggested alternative: ‘reached_ProfileLimit’
                  (unsigned int) InterpreterProfileLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~
                                 reached_ProfileLimit
      lib/CompileJvm.gmk:172: recipe for target '/home/loongson/aoqi/jdk/build/linux-x86_64-zero-release/hotspot/variant-zero/libjvm/objs/precompiled/precompiled.hpp.gch' failed
      make[3]: *** [/home/loongson/aoqi/jdk/build/linux-x86_64-zero-release/hotspot/variant-zero/libjvm/objs/precompiled/precompiled.hpp.gch] Error 1
      make[3]: *** Waiting for unfinished jobs....
      lib/CompileGtest.gmk:58: recipe for target '/home/loongson/aoqi/jdk/build/linux-x86_64-zero-release/hotspot/variant-zero/libjvm/gtest/objs/precompiled/precompiled.hpp.gch' failed
      make[3]: *** [/home/loongson/aoqi/jdk/build/linux-x86_64-zero-release/hotspot/variant-zero/libjvm/gtest/objs/precompiled/precompiled.hpp.gch] Error 1
      make/Main.gmk:257: recipe for target 'hotspot-zero-libs' failed
      make[2]: *** [hotspot-zero-libs] Error 2

      ERROR: Build failed for target 'images' in configuration 'linux-x86_64-zero-release' (exit code 2)

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-zero_libjvm_gtest_objs_precompiled_precompiled.hpp.gch:
      In file included from /home/loongson/aoqi/jdk/src/hotspot/share/oops/method.hpp:32:0,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/runtime/signature.hpp:29,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/systemDictionary.hpp:34,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/javaClasses.hpp:28,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:35:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_InvocationLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: error: ‘InterpreterInvocationLimit’ was not declared in this scope
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: note: suggested alternative: ‘reached_InvocationLimit’
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
         ... (rest of output omitted)
      * For target hotspot_variant-zero_libjvm_objs_precompiled_precompiled.hpp.gch:
      In file included from /home/loongson/aoqi/jdk/src/hotspot/share/oops/method.hpp:32:0,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/runtime/signature.hpp:29,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/systemDictionary.hpp:34,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/classfile/javaClasses.hpp:28,
                       from /home/loongson/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:35:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp: In member function ‘bool InvocationCounter::reached_InvocationLimit(InvocationCounter*) const’:
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: error: ‘InterpreterInvocationLimit’ was not declared in this scope
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
      /home/loongson/aoqi/jdk/src/hotspot/share/interpreter/invocationCounter.hpp:100:27: note: suggested alternative: ‘reached_InvocationLimit’
                  (unsigned int) InterpreterInvocationLimit;
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
         ... (rest of output omitted)

      * All command lines available in /home/loongson/aoqi/jdk/build/linux-x86_64-zero-release/make-support/failure-logs.
      === End of repeated output ===

      === Make failed targets repeated here ===
      lib/CompileJvm.gmk:172: recipe for target '/home/loongson/aoqi/jdk/build/linux-x86_64-zero-release/hotspot/variant-zero/libjvm/objs/precompiled/precompiled.hpp.gch' failed
      lib/CompileGtest.gmk:58: recipe for target '/home/loongson/aoqi/jdk/build/linux-x86_64-zero-release/hotspot/variant-zero/libjvm/gtest/objs/precompiled/precompiled.hpp.gch' failed
      make/Main.gmk:257: recipe for target 'hotspot-zero-libs' failed
      === End of repeated output ===

      Hint: Try searching the build log for the name of the first failed target.
      Hint: See doc/building.html#troubleshooting for assistance.

      /home/loongson/aoqi/jdk/make/Init.gmk:305: recipe for target 'main' failed
      make[1]: *** [main] Error 2
      /home/loongson/aoqi/jdk/make/Init.gmk:186: recipe for target 'images' failed
      make: *** [images] Error 2

            Assignee:
            Qi Ao
            Reporter:
            Qi Ao
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: