8218031: Zero broken after JDK-8217922 (Compiler dead code removal)

Reviewed-by: thartmann, sgehwolf, shade