src/hotspot/share/interpreter/invocationCounter.hpp
@@ -92,6 +92,9 @@ class InvocationCounter {
   int    count() const                           { return _counter >> number_of_noncount_bits; }
 
 #ifdef CC_INTERP
+  static int InterpreterInvocationLimit;        // CompileThreshold scaled for interpreter use
+  static int InterpreterBackwardBranchLimit;    // A separate threshold for on stack replacement
+
   // Test counter using scaled limits like the asm interpreter would do rather than doing
   // the shifts to normalize the counter.
   // Checks sum of invocation_counter and backedge_counter as the template interpreter does.
@@ -102,11 +105,6 @@ class InvocationCounter {
   bool reached_BackwardBranchLimit(InvocationCounter *back_edge_count) const {
     return (_counter & count_mask) + (back_edge_count->_counter & count_mask) >=
            (unsigned int) InterpreterBackwardBranchLimit;
-  }
-  // Do this just like asm interpreter does for max speed.
-  bool reached_ProfileLimit(InvocationCounter *back_edge_count) const {
-    return (_counter & count_mask) + (back_edge_count->_counter & count_mask) >=
-           (unsigned int) InterpreterProfileLimit;
   }
 #endif // CC_INTERP
 
